bug fix where menu didnt work in phone view due to z-index still in code and main removed due to class

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -55,7 +55,6 @@
         border: none;
         display: flex;
         flex-direction: column;
-        z-index: -3;
         line-height: 20px;
     }
     .admin {display: none;}
